# rust_experiment

./: .gitignore  README.md  build.sh  config.nobuild.yaml  config.yaml
data/: toy-openai-server
server/: Cargo.toml
server/src/: main.rs
